add link page and pictues

--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo1.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -72,12 +72,11 @@
 
 <div class="container mt-5">
   <div class="row">
-    <!-- Column 1: Image -->
     <div class="col-md-6" >
-      <img src="img/question.png" alt="Image" class="img-fluid" style="margin-left: 100px; margin-top: 300px; width: 250px;">
+      <img src="../assets/images/question.jpg" alt="Image" class="img-fluid" style="margin-left: 100px; margin-top: 300px; width: 250px;">
       <p style="font-family: Arial, Helvetica, sans-serif;">Trees are vital for the planet, offering oxygen, shade, and wildlife habitat. Learn about tree care, planting, and their environmental importance in this FAQ.</p>
     </div>
-    <!-- Column 2: Questions -->
+
     <div class="col-md-6">
       <div class="container mt-5">
         <div class="row">
@@ -96,7 +95,6 @@
                   </div>
                 </div>
               </div><br>
-              <!-- Question 2 -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button" style="background-color: #28a745; font-family: Arial, Helvetica, sans-serif;font-size: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -110,7 +108,6 @@
                   </div>
                 </div>
               </div><br>
-              <!-- Question 3 -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button" style="background-color: #28a745; font-family: Arial, Helvetica, sans-serif;font-size: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -123,7 +120,6 @@
                   </div>
                 </div>
               </div><br>
-              <!-- Question 4 -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFour">
                   <button class="accordion-button" style="background-color: #28a745; font-family: Arial, Helvetica, sans-serif;font-size: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -136,7 +132,6 @@
                   </div>
                 </div>
               </div><br>
-              <!-- Question 5 -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingFive">
                   <button class="accordion-button" style="background-color: #28a745; font-family: Arial, Helvetica, sans-serif;font-size: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
@@ -149,7 +144,6 @@
                   </div>
                 </div>
               </div><br>
-              <!-- Question 6 -->
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingSix">
                   <button class="accordion-button" style="background-color: #28a745; font-family: Arial, Helvetica, sans-serif;font-size: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
@@ -183,21 +177,16 @@
     </div>
   </div>
   </div>
-  
-  
-  <!-- Footer -->
   <footer class="bg-success text-white py-4 ">
     <div class="container">
         <div class="row">
             <!-- Partners Section with 3 Images -->
             <div class="col-md-3">
                 <h3 style="font-family: Arial, Helvetica, sans-serif;">Partners</h3>
-                <img src="img/panter2.png" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
-                <img src="img/panter1.png" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
-                <img src="img/cam.png" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
+                <img src="../assets/images/photo_13_2025-01-16_15-54-19.jpg" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
+                <img src="../assets/images/photo_8_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
+                <img src="../assets/images/photo_7_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
             </div>
-  
-            <!-- Quick Links Section with 4 Icons -->
             <div class="col-md-3">
                 <h3 style="font-family: Arial, Helvetica, sans-serif;">Quick Links</h3>
                 <ul class="list-unstyled">
@@ -220,21 +209,15 @@
                   <option value="3" style="font-family: Arial, Helvetica, sans-serif;">Malaysa</option>
                 </select>
             </div>
-  
-            <!-- Connect Section with 4 Social Icons -->
             <div class="col-md-3">
                 <h3 style="font-family: Arial, Helvetica, sans-serif;">Connect</h3>
                <h6 style="font-family: Arial, Helvetica, sans-serif;">Online: Contact us</h6>  
                <h6 style="font-family: Arial, Helvetica, sans-serif;">Call: 012 33 44 55 </h6> <br>
-                 <!-- Example Icons -->
-      <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
-      <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
-      <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
-      <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
-               
+                <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
+                <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
+                <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
+                <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>      
             </div>
-  
-            <!-- Newsletter Signup Section -->
             <div class="col-md-3">
                 <h3 style="font-family: Arial, Helvetica, sans-serif;">Newsletter Signup</h3>
                 <form action="#" method="POST">
