--- a/pages/tree.html
+++ b/pages/tree.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="img/logo1.png" alt=""></a>
+      <a class="navbar-brand" href="#"><img src="../assets/images/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -72,7 +72,7 @@
   <div class="row align-items-center">
     <!-- Column 1: Image -->
     <div class="col-md-6">
-      <img src="img/greener planet .webp" class="img-fluid" alt="Placeholder Image">
+      <img src="../assets/images/green plan.jpg" class="img-fluid" alt="Placeholder Image">
     </div>
     <!-- Column 2: Text -->
     <div class="col-md-6">
@@ -107,19 +107,10 @@
     </div>
     <!-- Column 2: Image -->
     <div class="col-md-6 text-center">
-      <img src="img/planting-your-tree.jpg.webp" class="img-fluid" alt="Example Image">
+      <img src="../assets/images/planting-your-tree.jpg" class="img-fluid" alt="Example Image">
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
 
 <div class="text-bg">
   <br>
@@ -130,7 +121,7 @@
     <div class="row" style="margin-top:50px ;">
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree8.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree8.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">How to Plant Bare-Root Trees</h5>
               <p class="card-text text-center">Master the steps to plant bare-root trees and promote strong, healthy growth.
@@ -141,7 +132,7 @@
       </div>
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree9.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree9.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">Spring Health and Safety Checkups </h5>
               <p class="card-text text-center">
@@ -152,7 +143,7 @@
       </div>
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree10.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree5.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">Whiteflies</h5>
               <p class="card-text text-center">Destructive pests that can damage plants and spread rapidly in warm climates.</p>
@@ -163,16 +154,11 @@
     </div>
   </div>
   
-  
-  
-  
-  
-  
   <div class="container">
     <div class="row" style="margin-top:50px ;">
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree5.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree7.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">Flowering Green Giant</h5>
               <p class="card-text text-center">Add vibrant spring color with the Flowering Green Giant design, set against a Green
@@ -183,7 +169,7 @@
       </div>
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree6.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree5.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">Grapes Planting & Care Instructions</h5>
               <p class="card-text text-center">
@@ -195,7 +181,7 @@
       </div>
       <div class="col-md-4 py-3 py-md-0">
         <div class="card">
-          <img src="img/tree7.webp" alt="" class="card imge-top"height="200px">
+          <img src="../assets/images/tree6.jpg" alt="" class="card imge-top"height="200px">
             <div class="card-body">
               <h5 class="card-titel text-center" style="color: green;">How to Plant Containerized Trees</h5>
               <p class="card-text text-center">
@@ -247,20 +233,16 @@
 </div>
 </div>
 
-
-<!-- Footer -->
 <footer class="bg-success text-white py-4">
   <div class="container">
       <div class="row">
-          <!-- Partners Section with 3 Images -->
           <div class="col-md-3">
               <h3>Partners</h3>
-              <img src="img/panter2.png" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
-              <img src="img/panter1.png" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
-              <img src="img/cam.png" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
+              <img src="../assets/images/photo_8_2025-01-16_15-54-19.jpg" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
+              <img src="../assets/images/photo_7_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
+              <img src="../assets/images/photo_13_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
           </div>
 
-          <!-- Quick Links Section with 4 Icons -->
           <div class="col-md-3">
               <h3>Quick Links</h3>
               <ul class="list-unstyled">
@@ -284,12 +266,11 @@
               </select>
           </div>
 
-          <!-- Connect Section with 4 Social Icons -->
           <div class="col-md-3">
               <h3>Connect</h3>
              <h6>Online: Contact us</h6>  
              <h6>Call: 012 33 44 55 </h6> <br>
-               <!-- Example Icons -->
+ 
     <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
     <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
     <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
@@ -297,7 +278,6 @@
              
           </div>
 
-          <!-- Newsletter Signup Section -->
           <div class="col-md-3">
               <h3>Newsletter Signup</h3>
               <form action="#" method="POST">
