--- a/pages/Donation.html
+++ b/pages/Donation.html
@@ -43,12 +43,6 @@
       </nav>
     <br><br><br><br>
 
-
-
-
-
-
-
     <div class="container py-5">
         <div class="row">
             <!-- Image Column -->
@@ -138,9 +132,9 @@
                   <!-- Partners Section with 3 Images -->
                   <div class="col-md-3">
                       <h3 style="font-family: Arial, Helvetica, sans-serif;">Partners</h3>
-                      <img src="img/panter2.png" alt ="Partner 1" class="img-fluid mb-2" style="width: 90px;">
-                      <img src="img/panter1.png" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
-                      <img src="img/cam.png" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
+                      <img src="../assets/images/photo_13_2025-01-16_15-54-19.jpg" alt ="Partner 1" class="img-fluid mb-2" style="width: 90px;">
+                      <img src="../assets/images/photo_7_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
+                      <img src="../assets/images/photo_8_2025-01-16_15-54-19.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
                   </div>
         
                   <!-- Quick Links Section with 4 Icons -->
