--- a/FAQ.html
+++ b/FAQ.html
@@ -15,7 +15,7 @@
     
 
 
-
+  <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="img/logo1.png" alt=""></a>
@@ -171,18 +171,7 @@
     </div>
   </div>
 </div>
-<div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
-  <div class="container my-5  " >
-    <div class="row d-flex align-items-center ">
-      <div class="col text-start">
-        <p class="mt-5"><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
-      </div>
-      <div class="col text-end">
-        <button class="btn btn-success mt-4 " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button>
-      </div>
-    </div>
-  </div>
-  </div>
+<br><br><br><br><br><br>
   
   
   <!-- Footer -->
@@ -250,7 +239,24 @@
         </div>
     </div>
   </footer>
+</div>
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
   
 
