--- a/tree.html
+++ b/tree.html
@@ -13,6 +13,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
+  <div class="container-fluid p-0">
   <nav class="navbar navbar-expand-lg bg-success navigation-wrap">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="img/logo1.png" alt=""></a>
@@ -234,22 +235,9 @@
 
 
 
-<div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
-<div class="container my-5  " >
-  <div class="row d-flex align-items-center ">
-    <div class="col text-start">
-      <p class="mt-5"><h4>TOGETHER, REFORESTING THE GLOBE.</h4></p>
-    </div>
-    <div class="col text-end">
-      <button class="btn btn-success mt-4 ">DONATE NOW</button>
-    </div>
-  </div>
-</div>
-</div>
-
 
 <!-- Footer -->
-<footer class="bg-success text-white py-4">
+<footer class="bg-success text-white py-4" >
   <div class="container">
       <div class="row">
           <!-- Partners Section with 3 Images -->
@@ -314,7 +302,7 @@
   </div>
 </footer>
 
-
+</div>
 
 
 
