--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="seed.html"
                 ><h5>Seed</h5></a
               >
             </li>
