--- a/pages/tree.html
+++ b/pages/tree.html
@@ -220,7 +220,7 @@
 
 
 
-<div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
+<!-- <div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
 <div class="container my-5  " >
   <div class="row d-flex align-items-center ">
     <div class="col text-start">
@@ -231,7 +231,7 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
 
 <footer class="bg-success text-white py-4">
   <div class="container">
@@ -293,20 +293,6 @@
       </div>
   </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- Apply to a section -->
 <div class="parallax"></div>
 
