--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="#"><h5>Home</h5></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="pages/About.html"><h5>About us</h5></a>
+            <a class="nav-link active" aria-current="page" href="/pages/About.html"><h5>About us</h5></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../pages/tree.html"><h5>Tree</h5></a>
@@ -175,15 +175,15 @@
 </div>
 <div class="container mt-5">
   <div class="row align-items-center">
-    <!-- Text Section -->
+
     <div class="col-12 col-md-6 mx-auto">
       <div class="mb-4">
-        <!-- Heading and Line -->
+       
         <div class="d-flex align-items-center">
           <h4 class="fw-bold">Regional Engagement</h4>
           <hr class="flex-grow-1 ms-3" style="height: 4px; background-color: black; border: none;">
         </div>
-        <!-- Subtitle -->
+   
         <h3 class="mt-4 text-center fw-bold">Our Work Around the World</h3>
       </div>
     </div>
@@ -192,7 +192,7 @@
 
 <div class="container mt-4">
   <div class="row">
-    <!-- Thailand Card -->
+  
     <div class="col-md-4 mb-3">
       <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
         <img src="assets/images/Thailand.jpg" alt="Thailand" class="card-img-top" style="height: 200px;">
@@ -204,7 +204,7 @@
       </div>
     </div>
 
-    <!-- Cambodia Card -->
+   
     <div class="col-md-4 mb-3">
       <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
         <img src="assets/images/Cambodia.jpg" alt="Cambodia" class="card-img-top" style="height: 200px;">
@@ -216,7 +216,6 @@
       </div>
     </div>
 
-    <!-- Indonesia Card -->
     <div class="col-md-4 mb-3">
       <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
         <img src="assets/images/Indo.webp" alt="Indonesia" class="card-img-top" style="height: 200px;">
@@ -243,22 +242,6 @@
   </div>
 </div>
 
-
-<!-- <div class="cloumn" style="width: 100%;height: 100px; background-color:rgb(112, 111, 111); margin-top: 100px;">
-  <div class="container my-5  " >
-    <div class="row d-flex align-items-center ">
-      <div class="col text-start">
-        <p class="mt-5"><h4>TOGETHER, REFORESTING THE GLOBE.</h4></p>
-      </div>
-      <div class="col text-end" style="margin-top: -100px;">
-        <button class="btn btn-success mt-4 ">DONATE NOW</button>
-      </div>
-    </div>
-  </div>
-  </div> -->
-  
-  
-  <!-- Footer -->
   <footer class="bg-success text-white py-4">
     <div class="container">
         <div class="row">
@@ -269,7 +252,6 @@
                 <img src="assets/images/footer1-removebg-preview.png" alt="Partner 2" class="img-fluid mb-2">
             </div>
   
-            <!-- Quick Links Section with 4 Icons -->
             <div class="col-md-3">
                 <h3>Quick Links</h3>
                 <ul class="list-unstyled">
