--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -165,7 +165,7 @@
     </div>
   </div>
 </div>
-<div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
+<!-- <div class="cloumn" style="width: 1300px;height: 100px; background-color:whitesmoke;">
   <div class="container my-5  " >
     <div class="row d-flex align-items-center ">
       <div class="col text-start">
@@ -176,7 +176,7 @@
       </div>
     </div>
   </div>
-  </div>
+  </div> -->
   <footer class="bg-success text-white py-4 ">
     <div class="container">
         <div class="row">
