--- a/index.html
+++ b/index.html
@@ -446,161 +446,85 @@
       </div>
     </div>
 
-    <!-- <div class="cloumn" style="width: 100%;height: 100px; background-color:rgb(112, 111, 111); margin-top: 100px;">
-  <div class="container my-5  " >
-    <div class="row d-flex align-items-center ">
+  
+<div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
+  <div class="container " >
+    <div class="row d-flex justify-content-center align-items-center ">
       <div class="col text-start">
-        <p class="mt-5"><h4>TOGETHER, REFORESTING THE GLOBE.</h4></p>
+        <p><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
       </div>
-      <div class="col text-end" style="margin-top: -100px;">
-        <button class="btn btn-success mt-4 ">DONATE NOW</button>
+      <div class="col text-end">
+        <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button>
       </div>
     </div>
   </div>
-  </div> -->
-  <div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
-    <div class="container " >
-      <div class="row d-flex justify-content-center align-items-center ">
-        <div class="col text-start">
-          <p><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
-        </div>
-        <div class="col text-end">
-          <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button>
-        </div>
-      </div>
-    </div>
-    </div>
+  </div>
 
-    <!-- Footer -->
-    <footer class="bg-success text-white py-4">
-      <div class="container">
-        <div class="row">
+
+<!-- Footer -->
+<footer class="bg-success text-white py-4">
+  <div class="container">
+      <div class="row">
           <!-- Partners Section with 3 Images -->
           <div class="col-md-3">
-            <h3>Partners</h3>
-            <img
-              src="assets/images/footer-removebg-preview.png"
-              alt="Partner 1"
-              class="img-fluid mb-2"
-            />
-            <img
-              src="assets/images/footer1-removebg-preview.png"
-              alt="Partner 2"
-              class="img-fluid mb-2"
-            />
+              <h3>Partners</h3>
+              <img src="/Restore-Forests/assets/images/panter-2.jpg" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
+              <img src="/Restore-Forests/assets/images/panter-1.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
+              <img src="/Restore-Forests/assets/images/cam.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
           </div>
 
           <!-- Quick Links Section with 4 Icons -->
           <div class="col-md-3">
-            <h3>Quick Links</h3>
-            <ul class="list-unstyled">
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-home"></i>
-                  <h6 class="name" style="color: rgb(248, 250, 248)">
-                    Home
-                  </h6></a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-info-circle"></i>
-                  <h6 class="name" style="color: rgb(254, 255, 254)">
-                    About
-                  </h6></a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-services"></i>
-                  <h6 class="name" style="color: rgb(249, 250, 249)">
-                    Tree
-                  </h6></a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-phone"></i>
-                  <h6 class="name" style="color: rgb(254, 255, 254)">
-                    Seed
-                  </h6></a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-phone"></i>
-                  <h6 class="name" style="color: rgb(246, 252, 246)">FAQ</h6></a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-white"
-                  ><i class="fas fa-phone"></i>
-                  <h6 class="name" style="color: rgb(249, 252, 249)">
-                    Donation Form
-                  </h6></a
-                >
-              </li>
-            </ul>
-            <select class="form-select" aria-label="Default select example">
-              <option selected>English</option>
-              <option value="1">Cambodia</option>
-              <option value="2">Chinese</option>
-              <option value="3">Thai</option>
-              <option value="3">Germani</option>
-              <option value="3">Vietnam</option>
-              <option value="3">Japan</option>
-              <option value="3">Loar</option>
-              <option value="3">Malaysia</option>
-            </select>
+              <h3>Quick Links</h3>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white"><i class="fas fa-home"></i> <h6 class="name" style="color: rgb(255, 255, 255);">Home</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-info-circle"></i> <h6 class="name" style="color: rgb(255, 255, 255);">About</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-services"></i> <h6 class="name" style="color: rgb(255, 255, 255);">Tree</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(255, 255, 255);">Seed</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(255, 255, 255);">FAQ</h6></a></li>
+                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(253, 253, 253);">Donation Form</h6></a></li>
+              </ul>
+              <select class="form-select" aria-label="Default select example" >
+                <option selected>English</option>
+                <option value="1">Khmer</option>
+                <option value="2">Chineese</option>
+                <option value="3">Thia</option>
+                <option value="3">Greman</option>
+                <option value="3">U.K</option>
+                <option value="3">Japen</option>
+                <option value="3">Lao</option>
+                <option value="3">Malaysa</option>
+              </select>
           </div>
 
           <!-- Connect Section with 4 Social Icons -->
           <div class="col-md-3">
-            <h3>Connect</h3>
-            <h6>Online: Contact us</h6>
-            <h6>Call: 012 33 44 55 </h6>
-            <br />
-            <!-- Example Icons -->
-            <i class="bi bi-facebook" style="font-size: 25px; padding: 4px"></i>
-            <i
-              class="bi bi-instagram"
-              style="font-size: 25px; padding: 2px"
-            ></i>
-            <i class="bi bi-tiktok" style="font-size: 25px; padding: 2px"></i>
-            <i class="bi bi-twitter" style="font-size: 25px; padding: 2px"></i>
+              <h3>Connect</h3>
+             <h6>Online: Contact us</h6>  
+             <h6>Call: 012 33 44 55 </h6> <br>
+               <!-- Example Icons -->
+    <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
+    <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
+    <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
+    <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
+             
           </div>
 
           <!-- Newsletter Signup Section -->
           <div class="col-md-3">
-            <h3>Newsletter Signup</h3>
-            <form action="#" method="POST">
-              <div class="mb-3">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="first-name"
-                  placeholder="Enter your first name...."
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <input
-                  type="email"
-                  class="form-control"
-                  id="email"
-                  placeholder="Enter your Email..."
-                  required
-                />
-              </div>
-              <button type="submit" class="btn btn-dark btn-block">
-                SING UP
-              </button>
-            </form>
+              <h3>Newsletter Signup</h3>
+              <form action="#" method="POST">
+                  <div class="mb-3">
+                      <input type="text" class="form-control" id="first-name" placeholder="Enter your first name...." required>
+                  </div>
+                  <div class="mb-3">
+                      <input type="email" class="form-control" id="email" placeholder="Enter your Email..." required>
+                  </div>
+                  <button type="submit" class="btn btn-warning btn-block">SING UP</button>
+              </form>
           </div>
-        </div>
       </div>
-    </footer>
-  </body>
-</html>
+  </div>
+</footer>
 
 <script src="JavaScript/animation.js"></script>
