--- a/pages/tree.html
+++ b/pages/tree.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../style/tree.css">
   <link rel="stylesheet" href="responsive-style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="../JavaScript/main.js"></script>
+   <script src="../JavaScript/tree.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
@@ -315,7 +315,7 @@
 </footer>
 
   <!-- Bootstrap Bundle with Popper -->
-   <script src="main.js"></script>
+   <script src="../pages/tree.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
