--- a/seed.html
+++ b/seed.html
@@ -16,6 +16,10 @@
       href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <script src="seed.js"></script>
+    <!-- Add these lines in the <head> section for AOS -->
+<link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
@@ -113,11 +117,11 @@
           </p>
         </div>
       </div>
+
+
       <div class="container text-center p-5 pb-0">
         <div class="row justify-content-center gap-3">
-          <div
-            class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5"
-          >
+          <div class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5">
             <div class="card-img">
               <img
                 width="75"
@@ -128,16 +132,15 @@
             </div>
             <div class="card-body mt-3 bg-success rounded-5">
               <h2
+                id="counter1"
                 class="text-center fw-bolder text-white"
                 style="font-family: Arial, Helvetica, sans-serif"
               >
-                123
+                0
               </h2>
             </div>
           </div>
-          <div
-            class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5"
-          >
+          <div class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5">
             <div class="card-img">
               <img
                 width="75"
@@ -148,16 +151,15 @@
             </div>
             <div class="card-body mt-3 bg-success rounded-5">
               <h2
+                id="counter2"
                 class="text-center fw-bolder text-white"
                 style="font-family: Arial, Helvetica, sans-serif"
               >
-                765
+                0
               </h2>
             </div>
           </div>
-          <div
-            class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5"
-          >
+          <div class="col col-lg-2 shadow-lg p-3 mb-5 bg-body-tertiary rounded-5">
             <div class="card-img">
               <img
                 width="75"
@@ -168,15 +170,27 @@
             </div>
             <div class="card-body mt-3 bg-success rounded-5">
               <h2
+                id="counter3"
                 class="text-center fw-bolder text-white"
                 style="font-family: Arial, Helvetica, sans-serif"
               >
-                987
+                0
               </h2>
             </div>
           </div>
         </div>
       </div>
+      
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6">
@@ -407,6 +421,17 @@
         </div>
       </footer>
     </div>
+
+
+
+
+
+
+
+
+
+
+    <script src="seed.js"></script>
     <script src="/Restore-Forests/JavaScript/animation1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
