new code update

--- a/index.html
+++ b/index.html
@@ -403,50 +403,54 @@
         class="pay d-flex justify-content-center flex-wrap"
         style="gap: 3%; margin-top: 7%"
       >
-        <a href=""
-          ><img
+        <a href="" class="hover-image">
+          <img
             src="assets/images/7eleven.png"
             width="90"
             height="90"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="7 Eleven"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/A.jpg"
             width="110"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="A"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Amazon.png"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Amazon"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Eco.jpg"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Eco"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Ya.jpg"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Ya"
-        /></a>
+          />
+        </a>
       </div>
     </div>
-
-  
+    
 <div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
   <div class="container " >
     <div class="row d-flex justify-content-center align-items-center ">
@@ -454,7 +458,7 @@
         <p><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
       </div>
       <div class="col text-end">
-        <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button>
+        <a href="../Restore-Forests/pages/Donation.html"><button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button></a>
       </div>
     </div>
   </div>
