--- a/pages/About.html
+++ b/pages/About.html
@@ -235,7 +235,7 @@
         <p><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
       </div>
       <div class="col text-end">
-        <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button>
+      <a href="../pages/Donation.html">  <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button></a>
       </div>
     </div>
   </div>
