--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap fixed-top">
@@ -403,49 +408,53 @@
         class="pay d-flex justify-content-center flex-wrap"
         style="gap: 3%; margin-top: 7%"
       >
-        <a href=""
-          ><img
+        <a href="" class="hover-image">
+          <img
             src="assets/images/7eleven.png"
             width="90"
             height="90"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="7 Eleven"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/A.jpg"
             width="110"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="A"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Amazon.png"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Amazon"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Eco.jpg"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Eco"
-        /></a>
-        <a href=""
-          ><img
+          />
+        </a>
+        <a href="" class="hover-image">
+          <img
             src="assets/images/Ya.jpg"
             width="100"
             height="100"
             class="rounded-circle shadow p-3 mb-5 bg-body-tertiary"
             alt="Ya"
-        /></a>
+          />
+        </a>
       </div>
     </div>
-
   
 <div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
   <div class="container " >
