--- a/pages/About.html
+++ b/pages/About.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forests</title>
     <script src="../JavaScript/animation1.js"></script>
-    <link rel="stylesheet" href="../style/style1.css" />
-    <link rel="stylesheet" href="/Restore-Forests/style/tree.css">
+    <link rel="stylesheet" href="/Restore-Forests/style/style1.css" />
+    <link rel="stylesheet" href="/Restore-Forests/style/tree.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -17,6 +17,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap fixed-top">
@@ -59,7 +64,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/Restore-Forests/seed.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/Restore-Forests/seed.html"
                 ><h5>Seed</h5></a
               >
             </li>
@@ -89,8 +97,10 @@
       </div>
     </nav>
 
-    <div class="text text-center p-4" style="margin-top: 70px;">
-      <h2 style="font-weight: bold;font-family: Arial, Helvetica, sans-serif;" >About Us</h2>
+    <div class="text text-center p-4" style="margin-top: 70px">
+      <h2 style="font-weight: bold; font-family: Arial, Helvetica, sans-serif">
+        About Us
+      </h2>
       <h3>One tree planted</h3>
       <p>A non-profit organization focused on Global Reforestation.</p>
     </div>
@@ -226,9 +236,10 @@
           />
         </div>
       </div>
-    </div><br><br><br><br><br>
-    
-<div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
+    </div>
+
+
+    <div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
   <div class="container " >
     <div class="row d-flex justify-content-center align-items-center ">
       <div class="col text-start">
@@ -242,70 +253,134 @@
   </div>
 
 
-<!-- Footer -->
-<footer class="bg-success text-white py-4">
-  <div class="container">
-      <div class="row">
-          <!-- Partners Section with 3 Images -->
+    <footer class="bg-success text-white py-4">
+      <div class="container">
+        <div class="row">
           <div class="col-md-3">
-              <h3>Partners</h3>
-              <img src="/Restore-Forests/assets/images/panter-2.jpg" alt="Partner 1" class="img-fluid mb-2" style="width: 90px;">
-              <img src="/Restore-Forests/assets/images/panter-1.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 100px;">
-              <img src="/Restore-Forests/assets/images/cam.jpg" alt="Partner 2" class="img-fluid mb-2" style="width: 195px; height: 90px;">
+            <h3>Partners</h3>
+            <img
+              src="/Restore-Forests/assets/images/panter-2.jpg"
+              alt="Partner 1"
+              class="img-fluid mb-2"
+              style="width: 90px"
+            />
+            <img
+              src="/Restore-Forests/assets/images/panter-1.jpg"
+              alt="Partner 2"
+              class="img-fluid mb-2"
+              style="width: 100px"
+            />
+            <img
+              src="/Restore-Forests/assets/images/cam.jpg"
+              alt="Partner 2"
+              class="img-fluid mb-2"
+              style="width: 195px; height: 90px"
+            />
           </div>
-
-          <!-- Quick Links Section with 4 Icons -->
           <div class="col-md-3">
-              <h3>Quick Links</h3>
-              <ul class="list-unstyled">
-                  <li><a href="#" class="text-white"><i class="fas fa-home"></i> <h6 class="name" style="color: rgb(255, 255, 255);">Home</h6></a></li>
-                  <li><a href="#" class="text-white" ><i class="fas fa-info-circle"></i> <h6 class="name" style="color: rgb(255, 255, 255);">About</h6></a></li>
-                  <li><a href="#" class="text-white" ><i class="fas fa-services"></i> <h6 class="name" style="color: rgb(255, 255, 255);">Tree</h6></a></li>
-                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(255, 255, 255);">Seed</h6></a></li>
-                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(255, 255, 255);">FAQ</h6></a></li>
-                  <li><a href="#" class="text-white" ><i class="fas fa-phone"></i>  <h6 class="name" style="color: rgb(253, 253, 253);">Donation Form</h6></a></li>
-              </ul>
-              <select class="form-select" aria-label="Default select example" >
-                <option selected>English</option>
-                <option value="1">Khmer</option>
-                <option value="2">Chineese</option>
-                <option value="3">Thia</option>
-                <option value="3">Greman</option>
-                <option value="3">U.K</option>
-                <option value="3">Japen</option>
-                <option value="3">Lao</option>
-                <option value="3">Malaysa</option>
-              </select>
+            <h3>Quick Links</h3>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-home"></i>
+                  <h6 class="name" style="color: rgb(255, 255, 255)">
+                    Home
+                  </h6></a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-info-circle"></i>
+                  <h6 class="name" style="color: rgb(255, 255, 255)">
+                    About
+                  </h6></a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-services"></i>
+                  <h6 class="name" style="color: rgb(255, 255, 255)">
+                    Tree
+                  </h6></a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-phone"></i>
+                  <h6 class="name" style="color: rgb(255, 255, 255)">
+                    Seed
+                  </h6></a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-phone"></i>
+                  <h6 class="name" style="color: rgb(255, 255, 255)">FAQ</h6></a
+                >
+              </li>
+              <li>
+                <a href="#" class="text-white"
+                  ><i class="fas fa-phone"></i>
+                  <h6 class="name" style="color: rgb(253, 253, 253)">
+                    Donation Form
+                  </h6></a
+                >
+              </li>
+            </ul>
+            <select class="form-select" aria-label="Default select example">
+              <option selected>English</option>
+              <option value="1">Khmer</option>
+              <option value="2">Chineese</option>
+              <option value="3">Thia</option>
+              <option value="3">Greman</option>
+              <option value="3">U.K</option>
+              <option value="3">Japen</option>
+              <option value="3">Lao</option>
+              <option value="3">Malaysa</option>
+            </select>
           </div>
-
-          <!-- Connect Section with 4 Social Icons -->
           <div class="col-md-3">
-              <h3>Connect</h3>
-             <h6>Online: Contact us</h6>  
-             <h6>Call: 012 33 44 55 </h6> <br>
-               <!-- Example Icons -->
-    <i class="bi bi-facebook" style="font-size: 25px;padding: 4px;"></i>
-    <i class="bi bi-instagram" style="font-size: 25px;padding: 2px;"></i>
-    <i class="bi bi-tiktok" style="font-size: 25px;padding: 2px;"></i>
-    <i class="bi bi-twitter" style="font-size: 25px;padding: 2px;"></i>
-             
+            <h3>Connect</h3>
+            <h6>Online: Contact us</h6>
+            <h6>Call: 012 33 44 55 </h6>
+            <br />
+            <i class="bi bi-facebook" style="font-size: 25px; padding: 4px"></i>
+            <i
+              class="bi bi-instagram"
+              style="font-size: 25px; padding: 2px"
+            ></i>
+            <i class="bi bi-tiktok" style="font-size: 25px; padding: 2px"></i>
+            <i class="bi bi-twitter" style="font-size: 25px; padding: 2px"></i>
           </div>
-
-          <!-- Newsletter Signup Section -->
           <div class="col-md-3">
-              <h3>Newsletter Signup</h3>
-              <form action="#" method="POST">
-                  <div class="mb-3">
-                      <input type="text" class="form-control" id="first-name" placeholder="Enter your first name...." required>
-                  </div>
-                  <div class="mb-3">
-                      <input type="email" class="form-control" id="email" placeholder="Enter your Email..." required>
-                  </div>
-                  <button type="submit" class="btn btn-warning btn-block">SING UP</button>
-              </form>
+            <h3>Newsletter Signup</h3>
+            <form action="#" method="POST">
+              <div class="mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="first-name"
+                  placeholder="Enter your first name...."
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Enter your Email..."
+                  required
+                />
+              </div>
+              <button type="submit" class="btn btn-warning btn-block">
+                SING UP
+              </button>
+            </form>
           </div>
+        </div>
       </div>
-  </div>
-</footer>
+    </footer>
+   
   </body>
 </html>
