--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Forests</title>
     <link rel="stylesheet" href="style/style.css" />
     <link
+    
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -16,6 +17,8 @@
         font-family: Arial, Helvetica, sans-serif;
       }
     </style>
+    <img data-src="path/to/image.jpg" alt="Description" class="img-fluid" />
+
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-success navigation-wrap fixed-top">
@@ -53,7 +56,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="../pages/tree.html"
+                href="../Restore-Forests/pages/tree.html"
                 ><h5>Tree</h5></a
               >
             </li>
@@ -66,7 +69,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="../pages/FAQ.html"
+                href="../Restore-Forests/pages/FAQ.html"
                 ><h5>FAQ</h5></a
               >
             </li>
@@ -77,7 +80,7 @@
             >
               <li class="nav-item">
                 <a
-                  href="../pages/Donation.html"
+                  href="../Restore-Forests/pages/Donation.html"
                   class="link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
                   >Donation</a
                 >
@@ -455,7 +458,6 @@
         </a>
       </div>
     </div>
-    
 <div class="cloumn mt-5 d-flex justify-content-between" style=" background-color:whitesmoke;">
   <div class="container " >
     <div class="row d-flex justify-content-center align-items-center ">
@@ -537,3 +539,5 @@
 </footer>
 
 <script src="JavaScript/animation.js"></script>
+</body>
+</html>
