--- a/pages/Donation.html
+++ b/pages/Donation.html
@@ -189,7 +189,7 @@
                       <input type="text" class="form-control" id="first-name" placeholder="Enter your first name...." required>
                   </div>
                   <div class="mb-3">
-                      <input type="email" class="form-control" id="email" placeholder="Enter your Email..." required>
+                      <input type="email" class="form-control" placeholder="Enter your Email..." required>
                   </div>
                   <button type="submit" class="btn btn-warning btn-block">SING UP</button>
               </form>
