--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         class="pay d-flex justify-content-center flex-wrap"
         style="gap: 3%; margin-top: 7%"
       >
-        <a href="" class="hover-image">
+        <a href="https://www.7-eleven.com/" class="hover-image"  target="_blank">
           <img
             src="assets/images/7eleven.png"
             width="90"
@@ -429,7 +429,7 @@
             alt="A"
           />
         </a>
-        <a href="" class="hover-image">
+        <a href="https://www.amazon.com/" class="hover-image" target="_blank">
           <img
             src="assets/images/Amazon.png"
             width="100"
@@ -539,5 +539,6 @@
 </footer>
 
 <script src="JavaScript/animation.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
