--- a/seed.html
+++ b/seed.html
@@ -272,7 +272,7 @@
               <p><h4 style="font-family: Arial, Helvetica, sans-serif;">TOGETHER, REFORESTING THE GLOBE.</h4></p>
             </div>
             <div class="col text-end">
-               <a href="../pages/Donation.html">        <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button></a>
+               <a href="../Restore-Forests/pages/Donation.html">        <button class="btn btn-success " style="font-family: Arial, Helvetica, sans-serif;">DONATE NOW</button></a>
             </div>
           </div>
         </div>
